# code_character_simulator

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/ai/: CMakeLists.txt
src/ai/include/: ai.h  ai_utilities.h  attack_rules.h  group_state.h  guard_rules.h
src/ai/src/: ai.cpp  ai_utilities.cpp  attack_rules.cpp  group_state.cpp  guard_rules.cpp  player_ai_helper.cpp
src/ai1/: CMakeLists.txt
src/ai1/include/: ai1.h
src/ai1/src/: ai1.cpp
src/drivers/: CMakeLists.txt
src/drivers/include/: driver.h  main_driver.h  player_driver.h
src/drivers/src/: main_driver.cpp  player_driver.cpp
src/ipc/: CMakeLists.txt
src/ipc/include/: ipc.h
src/ipc/proto/: interrupts.proto  state.proto  terrain.proto  utilities.proto
src/ipc/src/: depopulate.cc  depopulate.cpp  interrupts.cpp  ipc.cpp  load_terrain.cpp  populate.cc  populate.cpp  state_transfer.cpp  store_terrain.cpp  test.cc  test.cpp
src/main/: CMakeLists.txt  a.out  cc  grid.txt  load.cpp  main.cpp  tiledtotxt.py  untitled.json
src/physics/: CMakeLists.txt
src/physics/include/: vector2d.h
src/physics/src/: vector2d.cpp
src/player/: CMakeLists.txt
src/player/include/: player_ai.h  player_ai_helper.h
src/player/src/: player_ai.cpp
src/player1/: CMakeLists.txt
src/player1/include/: player1.h
src/player1/src/: player1.cpp
src/player2/: CMakeLists.txt
src/player2/include/: player2.h
src/player2/src/: player2.cpp
src/state/: CMakeLists.txt
src/state/include/: state.h  utilities.h
src/state/include/actor/: actor.fwd.h  actor.h  archer.h  arrow.h  base.h  fire_ball.h  flag.fwd.h  flag.h  king.fwd.h  king.h  magician.h  projectile_handler.h  scout.h  swordsman.h  tower.h
src/state/include/actor/states/: actor_attack_state.h  actor_dead_state.h  actor_idle_state.h  actor_path_planning_state.h  actor_pursuit_state.h  actor_state.h
src/state/include/path_planner/: formation.h  graph.h  path_planner.h  path_planner_helper.h
src/state/include/player_state_handler/: player_state_handler.h  unit_views.h
src/state/include/terrain/: terrain.h  terrain_element.h
src/state/src/: state.cpp
src/state/src/actor/: actor.cpp  archer.cpp  arrow.cpp  base.cpp  fire_ball.cpp  flag.cpp  king.cpp  magician.cpp  projectile_handler.cpp  scout.cpp  swordsman.cpp  tower.cpp
src/state/src/actor/states/: actor_attack_state.cpp  actor_dead_state.cpp  actor_idle_state.cpp  actor_path_planning_state.cpp  actor_pursuit_state.cpp
src/state/src/path_planner/: formation.cpp  graph.cpp  path_planner.cpp  path_planner_helper.cpp
src/state/src/player_state_handler/: player_state_handler.cpp  unit_view.cpp
src/state/src/terrain/: terrain.cpp  terrain_element.cpp
src/tester/: CMakeLists.txt
src/tester/include/: tester.h
src/tester/src/: tester.cpp
