cmake_minimum_required(VERSION 3.6.2)
project(test)

include(GenerateExportHeader)
include(CMakeDependentOption)

option(BUILD_PHYSICS "Build physics shared library" OFF)
CMAKE_DEPENDENT_OPTION(BUILD_TESTER "Build tester shared library" OFF "NOT BUILD_PHYSICS" OFF)
CMAKE_DEPENDENT_OPTION(BUILD_MAIN "Build main executable" OFF "NOT BUILD_TESTER" OFF)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
	string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/${OUTPUTCONFIG}/bin)
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/${OUTPUTCONFIG}/lib)
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/${OUTPUTCONFIG}/lib)
endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)

if(BUILD_PHYSICS)
	add_subdirectory(src/physics)
elseif(BUILD_TESTER)
	add_subdirectory(src/tester)
elseif(BUILD_MAIN)
	add_subdirectory(src/main)
endif()
