cmake_minimum_required(VERSION 3.6.2)
project(main)

include(${CMAKE_INSTALL_PREFIX}/physics_config.cmake)
include(${CMAKE_INSTALL_PREFIX}/state_config.cmake)
set(RUNSRC main.cpp)
add_executable(main ${RUNSRC})
target_link_libraries(main physics state)
set_property(TARGET main PROPERTY CXX_STANDARD 11)
install(TARGETS main DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
